# sy-f1tenth

./: README.md
car-communication/: README.md  follower_node.py  receiver_node.py  sender_node.py  setup.py
followgap/: README.md  package.xml  setup.cfg  setup.py
followgap/follow_gap/: gt_follow_gap.py  overtake.py  overtake3.py
ftg-genetic-ml/: README.md  package.xml  setup.cfg  setup.py
ftg-genetic-ml-cpp/: CMakeLists.txt  README.md  package.xml
ftg-genetic-ml-cpp/include/: Parameters.h
ftg-genetic-ml-cpp/src/: main.cpp
ftg-genetic-ml/genetic_driver/: ftg.py  genetic_ml.py  parameters.py  supervisor.py
ftg-genetic-ml/include/: FollowTheGap.h  GeneticML.h
ftg-genetic-ml/src/: FollowTheGap.cpp  GeneticML.cpp  Parameters.cpp
sample-maps/: README.md  ai_lab_demo.csv  ai_lab_demo.pgm  ai_lab_demo.yaml  demo.csv  demo.pgm  demo.yaml  demo2.csv  demo2.pgm  demo2.yaml  inlab102.csv  inlab102.pgm  inlab102.yaml  inlab925.csv  inlab930.csv  inlab930.pgm  inlab930.yaml
